[gd_scene load_steps=19 format=3 uid="uid://bobf81d5tgrhx"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_pe0dp"]
[ext_resource type="Texture2D" uid="uid://bgd4uofsyupva" path="res://assets/truck/merchant.png" id="2_kdxhb"]
[ext_resource type="PackedScene" uid="uid://7iqdvqy4jv1c" path="res://Scenes/purchaseable.tscn" id="3_weg4s"]
[ext_resource type="Texture2D" uid="uid://c5b732vou3h3a" path="res://assets/truck/flyswatterpouchl.png" id="4_xrhkv"]
[ext_resource type="Texture2D" uid="uid://cnm8mqjvaqw37" path="res://assets/truck/fanpouchfull.png" id="5_pxid6"]
[ext_resource type="AudioStream" uid="uid://b83iwxwu5vjxx" path="res://sounds/Button_hover.mp3" id="6_2swfc"]
[ext_resource type="Texture2D" uid="uid://dnf1dhf3xdyis" path="res://assets/truck/fanpouch.png" id="6_5jpk2"]
[ext_resource type="AudioStream" uid="uid://dvh0iyup867x1" path="res://sounds/button_press.mp3" id="7_7l5gw"]
[ext_resource type="Texture2D" uid="uid://d3g25husvfate" path="res://assets/truck/canpouchfull.png" id="7_7wgq1"]
[ext_resource type="Texture2D" uid="uid://cnochd6yu2367" path="res://assets/truck/computer.png" id="8_2udkk"]
[ext_resource type="Texture2D" uid="uid://dbwjb75q4b3fd" path="res://assets/truck/canpouch.png" id="8_pqpmc"]
[ext_resource type="Texture2D" uid="uid://c8t1x3t7qy06v" path="res://assets/truck/add_button.png" id="9_gxnc0"]
[ext_resource type="FontFile" uid="uid://dh3r0t715nyei" path="res://fonts/m5x7.ttf" id="9_hxd4q"]
[ext_resource type="Texture2D" uid="uid://d2jd441t2bojd" path="res://assets/truck/canteenpouchfull.png" id="9_wrfl1"]
[ext_resource type="Texture2D" uid="uid://creux1i7kqlnl" path="res://assets/truck/canteenpouch.png" id="10_2vuck"]
[ext_resource type="Texture2D" uid="uid://l06oio844scw" path="res://assets/truck/add_button_pressed.png" id="10_wsqxb"]
[ext_resource type="Texture2D" uid="uid://dk6118gnwaxqu" path="res://assets/truck/add_button_hover.png" id="11_t3pii"]
[ext_resource type="Texture2D" uid="uid://l6xo36ob1kur" path="res://assets/truck/add_button_disabled.png" id="12_as8lt"]

[node name="shop" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pe0dp")

[node name="Merchant" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(240, 135)
texture = ExtResource("2_kdxhb")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(240, 135)
zoom = Vector2(4, 4)

[node name="items" type="Control" parent="."]
anchors_preset = 0

[node name="purchaseable" parent="items" instance=ExtResource("3_weg4s")]
layout_mode = 0
offset_left = 208.0
offset_top = 51.0
offset_right = 267.0
offset_bottom = 153.0
item = 1
empty_sprite = ExtResource("4_xrhkv")

[node name="purchaseable2" parent="items" instance=ExtResource("3_weg4s")]
layout_mode = 0
offset_left = 107.0
offset_top = 86.0
offset_right = 197.0
offset_bottom = 163.0
texture = ExtResource("5_pxid6")
item = 2
empty_sprite = ExtResource("6_5jpk2")

[node name="purchaseable3" parent="items" instance=ExtResource("3_weg4s")]
layout_mode = 0
offset_left = 132.0
offset_top = 161.0
offset_right = 186.0
offset_bottom = 235.0
texture = ExtResource("7_7wgq1")
item = 2
empty_sprite = ExtResource("8_pqpmc")

[node name="purchaseable4" parent="items" instance=ExtResource("3_weg4s")]
layout_mode = 0
offset_left = 226.0
offset_top = 159.0
offset_right = 288.0
offset_bottom = 251.0
texture = ExtResource("9_wrfl1")
item = 2
empty_sprite = ExtResource("10_2vuck")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2swfc")
volume_db = -7.496

[node name="press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_7l5gw")

[node name="Computer" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(49, 225)
texture = ExtResource("8_2udkk")

[node name="cones" type="Label" parent="Computer"]
texture_filter = 1
offset_left = -36.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_hxd4q")
text = "10
"
horizontal_alignment = 1

[node name="cheeseman" type="Label" parent="Computer"]
texture_filter = 1
offset_left = -15.0
offset_right = 25.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_hxd4q")
text = "10"
horizontal_alignment = 1

[node name="rocket" type="Label" parent="Computer"]
texture_filter = 1
offset_left = 7.0
offset_top = -3.0
offset_right = 47.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_hxd4q")
text = "10"
horizontal_alignment = 1

[node name="ConeButton" type="TextureButton" parent="Computer"]
offset_left = -21.0
offset_top = 19.0
offset_right = -12.0
offset_bottom = 26.0
texture_normal = ExtResource("9_gxnc0")
texture_pressed = ExtResource("10_wsqxb")
texture_hover = ExtResource("11_t3pii")
texture_disabled = ExtResource("12_as8lt")

[node name="CheesemanButton" type="TextureButton" parent="Computer"]
offset_left = 1.0
offset_top = 17.0
offset_right = 10.0
offset_bottom = 24.0
texture_normal = ExtResource("9_gxnc0")
texture_pressed = ExtResource("10_wsqxb")
texture_hover = ExtResource("11_t3pii")
texture_disabled = ExtResource("12_as8lt")

[node name="RocketButton" type="TextureButton" parent="Computer"]
offset_left = 22.0
offset_top = 15.0
offset_right = 31.0
offset_bottom = 22.0
texture_normal = ExtResource("9_gxnc0")
texture_pressed = ExtResource("10_wsqxb")
texture_hover = ExtResource("11_t3pii")
texture_disabled = ExtResource("12_as8lt")

[connection signal="pressed" from="Computer/ConeButton" to="." method="add_cones" binds= [0]]
[connection signal="pressed" from="Computer/CheesemanButton" to="." method="add_cones" binds= [1]]
[connection signal="pressed" from="Computer/RocketButton" to="." method="add_cones" binds= [2]]
